<?xml version="1.0"?>
<package format="2">
  <name>robolimb</name>
  <version>0.0.0</version>
  <description>The robolimb package</description>

  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <author email="roshthoms2@gmail.com">Rosh Thomas</author>
  <author email="v.ivan@ed.ac.uk">Vladimir Ivan</author>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
